src/test/examples/custom/valid/class/canCallPublicClassFunctionWithArgs.wacc
# Public class functions with arguments can be called

begin
  class H is 
    public int v
    public int J(int v) is 
      return 0
    end
    public int f() is 
       v = 3 ;
       return v
    end
  end
  int f() is 
    return 0
  end
  H v = new H(2) ; 
  int k = call v.J(3) 
end