src/test/examples/custom/invalid/semanticErr/class/classFunctionBodyCannotContainGlobalFunctions.wacc
# Global Functions cannot be called inside class functions

begin
  class H is 
    public int v
    private int J(int z) is 
      return 0
    end
    public int f() is 
       int k = call L() ;
       v = 3 ;
       return v
    end
  end
  int L() is 
    return 0
  end
  H v = new H(2) ; 
  int k = call v.f() 
end